@@ -1,5 +1,14 @@
 2013-10-30  Antti Koivisto  <antti@apple.com>
 
+        Make SimpleLineLayout::Layout a class
+        https://bugs.webkit.org/show_bug.cgi?id=123508
+
+        Reviewed by Mario Sanchez Prada.
+
+        Improve encapsulation.
+
+2013-10-30  Antti Koivisto  <antti@apple.com>
+
         REGRESSION(r158214): It made zillion tests crash on GTK and EFL
         https://bugs.webkit.org/show_bug.cgi?id=123505
 
